--- a/src/main/webapp/resource/js/script.html
+++ b/src/main/webapp/resource/js/script.html
@@ -253,15 +253,25 @@
 		var removeNodeButton = document.querySelector("#remove-node-button");
 		var container = document.querySelector("#node-container");
 		
+		var remove1 = function(e){
+			container.removeChild(e.target);
+		};
+		
+		var idx = 0;
 		
 		addTextNodeButton.onclick = function(){
+			var span = document.createElement("span");
+			
 			//1. TextNode 생성
-			var txt = document.createTextNode("안녕하세요.");
+			var txt = document.createTextNode("안녕하세요." + idx++);
 			
 			//2. container(부모)를 얻기			
 			
 			//3, 부모에 자식을 추가
-			container.appendChild(txt);
+			span.appendChild(txt);
+			container.appendChild(span);
+			
+			span.onclick = remove1;
 
 		};
 		
@@ -273,12 +283,16 @@
 			container.appendChild(img); */
 			
 			//how2 간단하지만 성능면에서는 아주 좋지않다.
-			container.innerHTML += '<img src="https://img-wishbeen.akamaized.net/plan/1437707646107_4.png">';
+			container.innerHTML += '<img onclick="remove1" src="https://img-wishbeen.akamaized.net/plan/1437707646107_4.png">';
 		};
 		
 		removeNodeButton.onclick = function(){
 			// 1. 자동으로 맨 마지막 노드부터 삭제
+			container.removeChild(container.lastChild);
+			
 			// 2. 원하는 노드를 선택해서 삭제
+			
+
 		};
 	};
 </script>
