--- a/src/main/webapp/resource/js/script.html
+++ b/src/main/webapp/resource/js/script.html
@@ -246,7 +246,7 @@
 	}; */
 	
 	<!-- 텍스트 노드 추가  예제-------------------------------------------------- -->
-	
+	/* 
 	window.onload = function(){
 		var addTextNodeButton = document.querySelector("#add-text-node-button");
 		var addImgNodeButton = document.querySelector("#add-img-node-button");
@@ -280,7 +280,7 @@
 			/* var img = document.createElement("img");
 			img.src = "https://img-wishbeen.akamaized.net/plan/1437707646107_4.png";
 			
-			container.appendChild(img); */
+			container.appendChild(img); 
 			
 			//how2 간단하지만 성능면에서는 아주 좋지않다.
 			container.innerHTML += '<img onclick="remove1" src="https://img-wishbeen.akamaized.net/plan/1437707646107_4.png">';
@@ -292,13 +292,40 @@
 			
 			// 2. 원하는 노드를 선택해서 삭제
 			
-
+		};
+	};
+	 */
+	
+<!-- 노드 바꾸기 예제-------------------------------------------------- -->
+	
+	window.onload = function(){
+		var swapNodeButton = document.querySelector("#swap-node-button");
+		var container = document.querySelector("#node-swap-container");
+		
+		swapNodeButton.onclick = function(){
+			//var node1 = container.querySelector("img:first-child");
+			//var node3 = document.querySelector("img:last-child");
+			var nodes = container.getElementsByTagName("img");
+			var node1 = nodes[0];
+			var node3 = nodes[2];
+			var nodeNext = node1.nextElementSibling;
+			
+			var oldNode = container.replaceChild(node1, node3);
+			container.insertBefore(node3, nodeNext);
 		};
 	};
 </script>
 </head>
 <body>
-	<!-- 텍스트 노드 추가 예제-------------------------------------------------- -->
+	<!-- 노드 바꾸기 예제-------------------------------------------------- -->
+	<input id="swap-node-button" type="button" value="노드 바꾸기"/>
+	<div id="node-swap-container">
+		<img src="../images/answeris.png"/><img src="../images/w3c.png"/><img src="../images/wikibook.png"/>
+	</div>
+	
+	<hr/>
+
+	<!-- 텍스트 노드 추가 예제--------------------------------------------------  -->
 	<input id="add-text-node-button" type="button" value="텍스트 노드 추가"/>
 	<input id="add-img-node-button" type="button" value="이미지 노드 추가"/>
 	<input id="remove-node-button" type="button" value="노드 삭제"/>
