--- a/src/main/webapp/resource/js/script.html
+++ b/src/main/webapp/resource/js/script.html
@@ -413,10 +413,11 @@
 		
 	});
 	
-	<!-- 템플릿 태그를 이용한 노드복제 예제------------------>
+	<!-- 템플릿 태그를 이용한 노드복제 & Ajax 요청 예제------------------>
 	<!-- 지원을 하지않는 브라우져도 있기 때문에 조건검사가 먼저 들어가자! -->
 	window.addEventListener("load", function(){
 		var cloneButton = document.querySelector("#ex2-clone input[value='단순복제']");
+		var ajaxButton = document.querySelector("#ex2-clone input[value='Ajax요청']");
 		var tbody = document.querySelector("#ex2-clone tbody");
 		var template = document.querySelector("#ex2-clone template");
 		
@@ -426,6 +427,9 @@
 			{id:"3", title:"hhhhhh~~~", writerId:"lewnewnew"}
 		];
 		
+		ajaxButton.onclick = function(e){
+			var xhr = new XmpHttpRequest(); //모든 브라우져에 호환되는 기능
+		};
 		
 		cloneButton.onclick = function(e){
 			/* 
@@ -471,10 +475,11 @@
 </script>
 </head>
 <body>
-	<!-- 템플릿 태그를 이용한 노드복제 예제------------------>
+	<!-- 템플릿 태그를 이용한 노드복제 & Ajax 요청 예제------------------>
 	<div id="ex2-clone">	
 		<div>
 			<input type="button" value="단순복제"/>
+			<input type="button" value="Ajax요청"/>
 		</div>
 		<div id="clone-container">
 			<table border="1">
